[tool.poetry]
name = "py-aiger-sat"
readme="README.md"
version = "1.0.1"
description = "Pythonic interface between AIGs and SAT solvers."
authors = ["Marcell Vazquez-Chanlatte <mvc@linux.com>"]
repository = "https://github.com/mvcisback/py-aiger-sat"
license="MIT"
packages = [
    { include = "aiger_sat" },
]

[tool.poetry.dependencies]
python = "^3.6"
python-sat = {version = "^0.1.4.dev13",allows-prereleases = true}
py-aiger = "^4.0.0"
py-aiger-cnf = "^3.0.0"
attrs = "^19.3"
py-aiger-bv = {version = "^2.0.0", optional = true}

[tool.poetry.dev-dependencies]
py-aiger-bv = "^2.0.0"
codecov = "^2.0"
pytest = "^5.0"
pytest-cov = "^2.7"
pytest-flake8 = "^1.0"
pytest-sugar = "^0.9.2"
pytest-xdist = "^1.29"


[tool.poetry.extras]
bitvector = ["py-aiger-bv"]
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

