[tool.poetry]
name = "py-aiger-sat"
readme="README.md"
version = "3.0.5"
description = "Pythonic interface between AIGs and SAT solvers."
authors = ["Marcell Vazquez-Chanlatte <mvc@linux.com>"]
repository = "https://github.com/mvcisback/py-aiger-sat"
license="MIT"
packages = [
    { include = "aiger_sat" },
]

[tool.poetry.dependencies]
python = "^3.7"
attrs = "^21.0.0"
py-aiger = "^6.0.0"
py-aiger-bv = {version = "^4.0.0", optional = true}
py-aiger-cnf = "^5.0.0"
python-sat = {version = "0.1.6.*", allow-prereleases = true}

[tool.poetry.dev-dependencies]
codecov = "^2.0"
pytest = "^6.0"
pytest-cov = "^2.7"
pytest-flake8 = "^1.0"
pytest-xdist = "^2.0.0"
py-aiger-bv = "^4.0.0"


[tool.poetry.extras]
bitvector = ["py-aiger-bv"]
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

